--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 PORT=5001
 MONGO_URI=mongodb://localhost:27017/p_scolaire
 JWT_SECRET=12345
-EMAIL_USER=gestion.scolarite.2025@gmail.com
-EMAIL_PASS=mqsqvajkrdgcmror
+EMAIL_USER=.........@gmail.com
+EMAIL_PASS=......
