--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 PORT=5001
-MONGO_URI=mongodb://localhost:27017/p_scolaire
+MONGO_URI=mongodb://localhost:27017/......
 JWT_SECRET=12345
 EMAIL_USER=.........@gmail.com
 EMAIL_PASS=......
